@@ -1,4 +1,4 @@
 DIST slack-term-0.4.1.tar.gz 245741 BLAKE2B 6601e0673ab2bfee780fc89325a40581ca4bcef1a93f81b6f26348b4de71ea5113fe958a15c4a015ca75f28b3869f3de0bf56b89f205781583577baac1bb251b SHA512 360a20a2d09167b84e4f14812313d0d12c0ba625471de8c87415b11a2ab6dd879487d4ea8e9fd1230b51f20012bda0800f3f1d147f62c0828b855663b1bb9a06
-EBUILD slack-term-0.4.1.ebuild 595 BLAKE2B 5cd98e3835214fec11d48762560bb19470617d430e7785cb0f02861250a576155d5464cba0a18732ace94346b87c956056034902f2e956aafdd697a48a901760 SHA512 d3c8718dae516a34e1228b53456ed677103314a8646ca4cf8686d61a1e3f02da46ca07c8531a55202e880fe8b939b9f1207478d2489b63536c3a68c377b49e22
-MISC ChangeLog 153 BLAKE2B 3a832724e4c76536266401271be4783a1c93377f9e6fe92f3dfa34d41ce6ab8764b6fc01abe38ab738c8b9c7c1cdbcc4d25c61429c06cd3598cfc96eb857e643 SHA512 e51ab9785635abe0d8c9edfa3954128ec92cb8826b64f6c676345063117d6a1431ca545fa4a1ff326630e2547a25282a0b10b4e0d65997fa8e2d6fe869090801
+EBUILD slack-term-0.4.1.ebuild 833 BLAKE2B e071cf7c031bb8e7c21d7e2bba38885d1fab9d9ff1ef4ed53c9766ddf1e85af5d03fb9b09a34f4776098809d5a27b26e7c1221c30d0d870f41aa66d77cce192b SHA512 9b2c3496a49957f4d5d9bda3210704a3ac9a8e61b2747db071f629bede8d4f70396fd152dab3790704c54155f09026cfbe795fbc4e92374732f373bf0488b6e9
+MISC ChangeLog 259 BLAKE2B 17333ceb2d4b6395522b1e00e109086a3cfbcc148985c8687ab8f90a325d640c99c6b4bcb0c16c7d177478870d10611e3040bccd779106e5c50ecfa6d7cecfc0 SHA512 552738e664ffe7dc8c5ef31c27c8e503a37193ae388dfe2379c08d418fdaf92a32f087fd1518c2b2981d912198a108f73900ac233c23b2daf52a474b4dccd7cb
 MISC metadata.xml 626 BLAKE2B d1a3711ec89906d83dd77db46f4d517110e54cc001620c839c6699fcea5f99708df666d91ca507572b12da2bc5f2039b66c35b001cb783f99942e23796511c45 SHA512 7253bb22ab2062635673e93e6198856cf2b2bc4a5e964d69ee5bd711a7df652fa237c783a516689228dd6d6775aa00bb0a3d94abe8e3997ad2b62a6a7a600562
