@@ -1,3 +1,6 @@
+  19 Aug 2019;  <bemeurer@gentoo.org> slack-term-0.4.1.ebuild:
+  net-im/slack-term: Fix go build process
+
 *slack-term-0.4.1 (19 Aug 2019)
 
   19 Aug 2019;  <bemeurer@gentoo.org> +metadata.xml, +slack-term-0.4.1.ebuild:
